[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["johanpark <pyhan23@gmail.com>"]
description = ""
name = "python-study"
version = "0.1.0"
[tool.poetry.dependencies]
bs4 = "^0.0.1"
python = "^3.7"
google-images-download = "^2.8"
[tool.poetry.dev-dependencies]
